chore(peppersteak): Add Image, description, ingredients, and Steps Iteration 3: recipe page content
In the Pepper Steak page I added an beautiful image of a cooked and served pepper steak dish. All together with the image I added an alt description for the image, so that readers can read it.
Next three things was the headline description with the paragraph separated each sentence on a new line. Added detailed ingredients in an unordered list and the steps to prepare in an ordered one.

--- a/recipes/peppersteak.html
+++ b/recipes/peppersteak.html
@@ -8,6 +8,40 @@
     <body>
         <a href="../index.html">Home</a>
         <h1>Pepper Steak</h1>
+        <img src="../images/peppersteak.png" alt="Cooked and served pepper steak dish" height="400" width="500">
+        <h3>Description</h3>
+        <p>Tender, flavorful, and cooked to perfection in the slow cooker, this pepper steak is a beloved family favorite.
+        <br>Prepare it ahead of time and serve over fluffy rice, egg noodles, or crispy chow mein for a comforting satisfying meal.</p>
+        
+        <!--<p><strong>Prep Time:</strong> <em>20 mins</em></p>
+        <p><strong>Cook Time:</strong> <em>3 hrs 10 mins</em></p>
+        <p><strong>Total Time:</strong> <em>3 hrs 30 mins</em></p>
+        <p><strong>Servings:</strong> <em>6</em></p> -->
+        
+        <h3>Ingredients</h3>
+        <ul>
+            <li><em>2 lbs beef sirloin, cut into 2-inch strips</em></li>
+            <li><em>¾ tsp garlic powder (or to taste)</em></li>
+            <li><em>3 tbsp vegetable oil</em></li>
+            <li><em>1 beef bouillon cube</em></li>
+            <li><em>¼ cup hot water</em></li>
+            <li><em>1 tbsp cornstarch</em></li>
+            <li><em>½ cup chopped onion</em></li>
+            <li><em>2 large green bell peppers, roughly chopped</em></li>
+            <li><em>1 can (14.5 oz) stewed tomatoes, with liquid</em></li>
+            <li><em>3 tbsp soy sauce</em></li>
+            <li><em>1 tsp white sugar</em></li>
+            <li><em>1 tsp salt</em></li>
+        </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Collect and measure out all ingredients to have them ready for cooking.</li>
+            <li>Season the beef sirloin strips with garlic powder. In a large skillet over medium heat, warm the vegetable oil and sear the beef for about 5 minutes on each side. Transfer the browned beef to the slow cooker.</li>
+            <li>In a separate container, dissolve the beef bouillon cube in hot water. Stir in the cornstarch until fully combined and smooth.</li>
+            <li>Add the beef strips to the slow cooker, then pour in the bouillon mixture. Stir in the chopped onion, green peppers, stewed tomatoes (with liquid), soy sauce, sugar, and salt.</li>
+            <li>Cover the slow cooker and cook on High for 3 to 4 hours, or on Low for 6 to 8 hours.</li>
+        </ol>
     </body>
 
 </html>
