--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/peppersteak.html">Pepper Steak</a>
+        <ul>
+            <li><strong><a href="recipes/peppersteak.html">Pepper Steak</a></strong></li>
+            <li><strong><a href="recipes/babybackribs.html">Baby Back Ribs</a></strong></li>
+            <li><strong><a href=""></a></strong></li>
+        </ul>
+        
     </body>
 
 </html>
