chore(macandcheese): Create Mac and Cheese page
Iteration 4: add more recipes => finished

Just finished adding the two more recipes required by The Odin Project.
in case the project has any more task or requirements, they will be added.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <ul>
             <li><strong><a href="recipes/peppersteak.html">Pepper Steak</a></strong></li>
             <li><strong><a href="recipes/babybackribs.html">Baby Back Ribs</a></strong></li>
-            <li><strong><a href=""></a></strong></li>
+            <li><strong><a href="recipes/macandcheese.html">Mac and Cheese</a></strong></li>
         </ul>
         
     </body>
