--- a/recipes/peppersteak.html
+++ b/recipes/peppersteak.html
@@ -10,10 +10,12 @@
         <h1>Pepper Steak</h1>
         <img src="../images/peppersteak.png" alt="Cooked and served pepper steak dish" height="400" width="500">
         <figcaption><i>Photo by Dotdash Meredith Food Studios</i></figcaption>
-        
+
         <h3>Description</h3>
-        <p>Tender, flavorful, and cooked to perfection in the slow cooker, this pepper steak is a beloved family favorite.
-        <br>Prepare it ahead of time and serve over fluffy rice, egg noodles, or crispy chow mein for a comforting satisfying meal.</p>
+        <p>
+            Tender, flavorful, and cooked to perfection in the slow cooker, this pepper steak is a beloved family favorite.
+            <br>Prepare it ahead of time and serve over fluffy rice, egg noodles, or crispy chow mein for a comforting satisfying meal.
+        </p>
         
         <!--<p><strong>Prep Time:</strong> <em>20 mins</em></p>
         <p><strong>Cook Time:</strong> <em>3 hrs 10 mins</em></p>
