--- a/recipes/babybackribs.html
+++ b/recipes/babybackribs.html
@@ -9,7 +9,7 @@
         <a href="../index.html">Home</a>
         <h1>Baby Back Ribs</h1>
         <img src="../images/babybackribs.png" alt="Perfectly served plate with baby back ribs" height="400" width="500">
-        <figcaption>Photo by Dotdash Meredith Food Studios</figcaption>
+        <figcaption><i> by Dotdash Meredith Food Studios</i></figcaption>
 
         <h3>Description</h3>
         <p>These slow cooker ribs come out perfectly tender every time! 
