--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><strong><a href="recipes/peppersteak.html">Pepper Steak</a></strong></li>
-            <li><strong><a href="recipes/babybackribs.html">Baby Back Ribs</a></strong></li>
-            <li><strong><a href="recipes/macandcheese.html">Mac and Cheese</a></strong></li>
+        <h1 class="odin-recipes">Odin Recipes</h1>
+        <ul class="recipes-list">
+            <li><strong><a class="pepper-steak" href="recipes/peppersteak.html">Pepper Steak</a></strong></li>
+            <li><strong><a class="baby-back-ribs" href="recipes/babybackribs.html">Baby Back Ribs</a></strong></li>
+            <li><strong><a class="mac-and-cheese" href="recipes/macandcheese.html">Mac and Cheese</a></strong></li>
         </ul>
         
     </body>
