--- a/recipes/babyBackRibs/babybackribs.html
+++ b/recipes/babyBackRibs/babybackribs.html
@@ -6,9 +6,9 @@
     </head>
 
     <body>
-        <a href="../index.html">Home</a>
+        <a href="/main/index.html">Home</a>
         <h1>Baby Back Ribs</h1>
-        <img src="../images/babybackribs.png" alt="Perfectly served plate with baby back ribs" height="400" width="500">
+        <img src="/images/babybackribs.png" alt="Perfectly served plate with baby back ribs" height="400" width="500">
         <figcaption><i> by Dotdash Meredith Food Studios</i></figcaption>
 
         <h3>Description</h3>
