--- a/recipes/macAndCheese/macandcheese.html
+++ b/recipes/macAndCheese/macandcheese.html
@@ -6,9 +6,9 @@
     </head>
         
     <body>
-        <a href="../index.html">Home</a>
+        <a href="/main/index.html">Home</a>
         <h1>Mac and Cheese</h1>
-        <img src="../images/macandcheese.png" alt="Tasty bowl of cooked and served Mac and Cheese" height="400" width="500">
+        <img src="/images/macandcheese.png" alt="Tasty bowl of cooked and served Mac and Cheese" height="400" width="500">
         <figcaption><i> by Allrecipes / Christina Bailey</i></figcaption>
 
         <h3>Description</h3>
