--- a/recipes/pepperSteak/peppersteak.html
+++ b/recipes/pepperSteak/peppersteak.html
@@ -6,9 +6,9 @@
     </head>
 
     <body>
-        <a href="../index.html">Home</a>
+        <a href="/main/index.html">Home</a>
         <h1>Pepper Steak</h1>
-        <img src="../images/peppersteak.png" alt="Cooked and served pepper steak dish" height="400" width="500">
+        <img src="/images/peppersteak.png" alt="Cooked and served pepper steak dish" height="400" width="500">
         <figcaption><i>Photo by Dotdash Meredith Food Studios</i></figcaption>
 
         <h3>Description</h3>
