sync windows to mac copy

--- a/recipes/babyBackRibs/babybackribs.html
+++ b/recipes/babyBackRibs/babybackribs.html
@@ -5,9 +5,9 @@
         <title>Baby Back Ribs</title>
     </head>
 
-    <body>
+    <body class="body-page">
         <a href="/main/index.html">Home</a>
-        <h1>Baby Back Ribs</h1>
+        <h1 class="baby_back_ribs">Baby Back Ribs</h1>
         <img src="/images/babybackribs.png" alt="Perfectly served plate with baby back ribs" height="400" width="500">
         <figcaption><i> by Dotdash Meredith Food Studios</i></figcaption>
 
