Update(odin-recipes) Add home page images and style home recipe list
Added images to the home page for better visual appeal and styled the recipe list to remove default list styling and add spacing.
To enhance user experience, included text alignment for buttons in the CSS on the main page.

--- a/main/index.html
+++ b/main/index.html
@@ -6,14 +6,18 @@
         <link rel="stylesheet" href="style.css">
     </head>
 
-    <body class="body-page">
+    <body>
         <h1 class="odin-recipes">Odin Recipes</h1>
-        <ul class="recipes-list">
+        <div class="home_images">
+            <img src="/images/peppersteak.png" alt="Pepper Steak" height="300" width="400" class="image_peppersteak">
+            <img src="/images/babybackribs.png" alt="Baby Back Ribs" height="300" width="400" class="image_babybackribs">
+            <img src="/images/macandcheese.png" alt="Mac and Cheese" height="300" width="400" class="image_macandcheese">
+        </div>
+        <ul>
             <li><strong><a class="pepper-steak" href="/recipes/pepperSteak/peppersteak.html">Pepper Steak</a></strong></li>
             <li><strong><a class="baby-back-ribs" href="/recipes/babyBackRibs/babybackribs.html">Baby Back Ribs</a></strong></li>
             <li><strong><a class="mac-and-cheese" href="/recipes/macAndCheese/macandcheese.html">Mac and Cheese</a></strong></li>
         </ul>
-        
     </body>
 
 </html>
