--- a/recipes/babyBackRibs/babybackribs.html
+++ b/recipes/babyBackRibs/babybackribs.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Baby Back Ribs</title>
+        <link rel="stylesheet" href="/recipes/babyBackRibs/babybackribs.css">
     </head>
 
-    <body class="body-page">
-        <a href="/main/index.html">Home</a>
+    <body>
+        <a class="home_Button"href="/main/index.html">Home</a>
         <h1 class="baby_back_ribs">Baby Back Ribs</h1>
-        <img src="/images/babybackribs.png" alt="Perfectly served plate with baby back ribs" height="400" width="500">
-        <figcaption><i> by Dotdash Meredith Food Studios</i></figcaption>
+        <img src="/images/babybackribs.png" alt="Perfectly served plate with baby back ribs" height="400" width="500" class="image_babybackribs">
+        <figcaption class="fig"><i> by Dotdash Meredith Food Studios</i></figcaption>
 
-        <h3>Description</h3>
+        <h3 class="description">Description</h3>
         <p>These slow cooker ribs come out perfectly tender every time! 
             They simmer slowly in a crockpot until juicy, <br>then get coated in barbecue sauce and baked in the oven for fall-off-the-bone goodness. 
             <br>An easy and delicious meal, perfect for busy weeknights.
@@ -22,7 +23,7 @@
         <p><strong>Total Time:</strong> <em>4 hrs 25 mins</em></p>
         <p><strong>Servings:</strong> <em>6</em></p> -->
 
-        <h3>Ingredients</h3>
+        <h3 class="ingredients">Ingredients</h3>
         <ul>
             <li><em>3 lbs baby back ribs, trimmed</em></li>
             <li><em>Salt and freshly ground black pepper, to taste</em></li>
@@ -32,7 +33,7 @@
             <li><em>1 bottle (18 oz) barbecue sauce</em></li>
         </ul>
 
-        <h3>Steps</h3>
+        <h3 class="steps">Steps</h3>
         <ol>
             <li>Collect and prepare all ingredients.</li>
             <li>Season the ribs generously with salt and black pepper.</li>
