--- a/recipes/macAndCheese/macandcheese.html
+++ b/recipes/macAndCheese/macandcheese.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Mac and Cheese</title>
+        <link rel="stylesheet" href="/recipes/macAndCheese/macandcheese.css">
     </head>
         
     <body>
-        <a href="/main/index.html">Home</a>
-        <h1>Mac and Cheese</h1>
-        <img src="/images/macandcheese.png" alt="Tasty bowl of cooked and served Mac and Cheese" height="400" width="500">
-        <figcaption><i> by Allrecipes / Christina Bailey</i></figcaption>
+        <a class="home_Button" href="/main/index.html">Home</a>
+        <h1 class="mac_and_cheese">Mac and Cheese</h1>
+        <img src="/images/macandcheese.png" alt="Tasty bowl of cooked and served Mac and Cheese" height="400" width="500" class="image_macandcheese">
+        <figcaption class="fig"><i> by Allrecipes / Christina Bailey</i></figcaption>
 
-        <h3>Description</h3>
+        <h3 class="description">Description</h3>
         <p>
             This crockpot mac and cheese is rich, creamy, and easy to prepare in just minutes. 
             <br>Perfect for family gatherings or potluck dinners, it’s always a crowd-pleaser!
@@ -22,7 +23,7 @@
         <p><strong>Total Time:</strong> <em>3 hrs 30 mins</em></p>
         <p><strong>Servings:</strong> <em>12</em></p> -->
 
-        <h3>Ingredients</h3>
+        <h3 class="ingredients">Ingredients</h3>
         <ul>
             <li><em>Elbow macaroni: a classic base for this mac and cheese recipe</em></li>
             <li><em>1 stick butter: adds richness and flavor</em></li>
@@ -34,7 +35,7 @@
             <li><em>Ground paprika (optional): adds a subtle kick for flavor lovers</em></li>
         </ul>
 
-        <h3>Steps</h3>
+        <h3 class="steps">Steps</h3>
         <ol>
             <li>Boil the pasta in salted water until tender, then drain and transfer it to the slow cooker.</li>
             <li>Stir in the butter, salt, pepper, and about half of the shredded Cheddar cheese.</li>
