--- a/recipes/pepperSteak/peppersteak.html
+++ b/recipes/pepperSteak/peppersteak.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Pepper Steak</title>
+        <link rel="stylesheet" href="/recipes/pepperSteak/peppersteak.css">
     </head>
 
     <body>
-        <a href="/main/index.html">Home</a>
-        <h1>Pepper Steak</h1>
-        <img src="/images/peppersteak.png" alt="Cooked and served pepper steak dish" height="400" width="500">
-        <figcaption><i>Photo by Dotdash Meredith Food Studios</i></figcaption>
+        <a class="home_Button" href="/main/index.html">Home</a>
+        <h1 class="pepper_steak">Pepper Steak</h1>
+        <img src="/images/peppersteak.png" alt="Cooked and served pepper steak dish" height="400" width="500" class="image_peppersteak">
+        <figcaption class="fig"><i>Photo by Dotdash Meredith Food Studios</i></figcaption>
 
-        <h3>Description</h3>
+        <h3 class="description">Description</h3>
         <p>
             Tender, flavorful, and cooked to perfection in the slow cooker, this pepper steak is a beloved family favorite.
             <br>Prepare it ahead of time and serve over fluffy rice, egg noodles, or crispy chow mein for a comforting satisfying meal.
@@ -22,7 +23,7 @@
         <p><strong>Total Time:</strong> <em>3 hrs 30 mins</em></p>
         <p><strong>Servings:</strong> <em>6</em></p> -->
         
-        <h3>Ingredients</h3>
+        <h3 class="ingredients">Ingredients</h3>
         <ul>
             <li><em>2 lbs beef sirloin, cut into 2-inch strips</em></li>
             <li><em>¾ tsp garlic powder (or to taste)</em></li>
@@ -38,7 +39,7 @@
             <li><em>1 tsp salt</em></li>
         </ul>
 
-        <h3>Steps</h3>
+        <h3 class="steps">Steps</h3>
         <ol>
             <li>Collect and measure out all ingredients to have them ready for cooking.</li>
             <li>Season the beef sirloin strips with garlic powder. In a large skillet over medium heat, warm the vegetable oil and sear the beef for about 5 minutes on each side. Transfer the browned beef to the slow cooker.</li>
