Update(HTML, CSS): Improve button hover effects and layout styles
Added hover effects to home buttons in recipe pages for better user interaction.
Changed the font to a preferred style for better readability.
Fixed the page positioning issue by adjusting CSS layout properties.

--- a/main/index.html
+++ b/main/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
         <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Agbalumo" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Akaya Kanadaka' rel='stylesheet'>
     </head>
 
     <body>
@@ -13,11 +15,14 @@
             <img src="/images/babybackribs.png" alt="Baby Back Ribs" height="300" width="400" class="image_babybackribs">
             <img src="/images/macandcheese.png" alt="Mac and Cheese" height="300" width="400" class="image_macandcheese">
         </div>
-        <ul>
-            <li><strong><a class="pepper-steak" href="/recipes/pepperSteak/peppersteak.html">Pepper Steak</a></strong></li>
-            <li><strong><a class="baby-back-ribs" href="/recipes/babyBackRibs/babybackribs.html">Baby Back Ribs</a></strong></li>
-            <li><strong><a class="mac-and-cheese" href="/recipes/macAndCheese/macandcheese.html">Mac and Cheese</a></strong></li>
-        </ul>
+
+        <div class="recipes">
+            <ul>
+                <li><strong><a class="pepper-steak" href="/recipes/pepperSteak/peppersteak.html">Pepper Steak</a></strong></li>
+                <li><strong><a class="baby-back-ribs" href="/recipes/babyBackRibs/babybackribs.html">Baby Back Ribs</a></strong></li>
+                <li><strong><a class="mac-and-cheese" href="/recipes/macAndCheese/macandcheese.html">Mac and Cheese</a></strong></li>
+            </ul>
+        </div>
     </body>
 
 </html>
