--- a/recipes/macAndCheese/macandcheese.html
+++ b/recipes/macAndCheese/macandcheese.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8">
         <title>Mac and Cheese</title>
         <link rel="stylesheet" href="/recipes/macAndCheese/macandcheese.css">
+        <link href="https://fonts.googleapis.com/css?family=Agbalumo" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Akaya Kanadaka' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Alfa Slab One' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     </head>
         
     <body>
