Odin Recipes - Update Styles and set up CSS file
Worked towards settings up the main page by centering images and fixing padding issues.
Created a new CSS file for recipes styling and updated existing styles for better appearance.

--- a/main/index.html
+++ b/main/index.html
@@ -4,23 +4,27 @@
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="recipes.css"
         <link href="https://fonts.googleapis.com/css?family=Agbalumo" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Akaya Kanadaka' rel='stylesheet'>
     </head>
 
     <body>
         <h1 class="odin-recipes">Odin Recipes</h1>
-        <div class="home_images">
-            <img src="/images/peppersteak.png" alt="Pepper Steak" height="300" width="400" class="image_peppersteak">
-            <img src="/images/babybackribs.png" alt="Baby Back Ribs" height="300" width="400" class="image_babybackribs">
-            <img src="/images/macandcheese.png" alt="Mac and Cheese" height="300" width="400" class="image_macandcheese">
-        </div>
-
         <div class="recipes">
             <ul>
-                <li><strong><a class="pepper-steak" href="/recipes/pepperSteak/peppersteak.html">Pepper Steak</a></strong></li>
-                <li><strong><a class="baby-back-ribs" href="/recipes/babyBackRibs/babybackribs.html">Baby Back Ribs</a></strong></li>
+                <div class="recipeOne">
+                    <li><strong><a class="pepper-steak" href="/recipes/pepperSteak/peppersteak.html">Pepper Steak</a></strong></li>
+                    <img src="/images/peppersteak.png" alt="Pepper Steak" height="300" width="400" class="image_peppersteak">
+                </div>
+                <div class="recipeTwo">
+                    <li><strong><a class="baby-back-ribs" href="/recipes/babyBackRibs/babybackribs.html">Baby Back Ribs</a></strong></li>
+                    <img src="/images/babybackribs.png" alt="Baby Back Ribs" height="300" width="400" class="image_babybackribs">
+                </div>
+                <div class="recipeThree">
                 <li><strong><a class="mac-and-cheese" href="/recipes/macAndCheese/macandcheese.html">Mac and Cheese</a></strong></li>
+                <img src="/images/macandcheese.png" alt="Mac and Cheese" height="300" width="400" class="image_macandcheese">
+                </div>
             </ul>
         </div>
     </body>
