--- a/recipes/pepperSteak/peppersteak.html
+++ b/recipes/pepperSteak/peppersteak.html
@@ -22,10 +22,10 @@
             <br>Prepare it ahead of time and serve over fluffy rice, egg noodles, or crispy chow mein for a comforting satisfying meal.
         </p>
         
-        <!--<p><strong>Prep Time:</strong> <em>20 mins</em></p>
+        <p><strong>Prep Time:</strong> <em>20 mins</em></p>
         <p><strong>Cook Time:</strong> <em>3 hrs 10 mins</em></p>
         <p><strong>Total Time:</strong> <em>3 hrs 30 mins</em></p>
-        <p><strong>Servings:</strong> <em>6</em></p> -->
+        <p><strong>Servings:</strong> <em>6</em></p>
         
         <h3 class="ingredients">Ingredients</h3>
         <ul>
