odin-recipes(main): updated styles for layout and borders
Added some new boxes as a background that you bring more contrast to the recipe cards.
Adjusted borders around images to better fit the overall design.
Refined padding and margin settings for better spacing and alignment.

--- a/main/index.html
+++ b/main/index.html
@@ -4,13 +4,16 @@
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="recipes.css"
+        <link rel="stylesheet" href="recipes.css">
         <link href="https://fonts.googleapis.com/css?family=Agbalumo" rel="stylesheet">
-        <link href='https://fonts.googleapis.com/css?family=Akaya Kanadaka' rel='stylesheet'>
+        <link href="https://fonts.googleapis.com/css?family=Akaya Kanadaka" rel="stylesheet">
     </head>
 
     <body>
-        <h1 class="odin-recipes">Odin Recipes</h1>
+        <h1>Odin Recipes</h1>
+        <p class="Welcome">Welcome to Odin Recipes! Explore a variety of delicious recipes that you can easily prepare at home using 
+        your slow cooker. Whether you're craving hearty meals or comforting classics, we've got you covered. Click on any recipe below to get started!</p>
+        
         <div class="recipes">
             <ul>
                 <div class="recipeOne">
@@ -28,5 +31,4 @@
             </ul>
         </div>
     </body>
-
 </html>
