--- a/recipes/babyBackRibs/babybackribs.html
+++ b/recipes/babyBackRibs/babybackribs.html
@@ -18,14 +18,14 @@
 
         <h3 class="description">Description</h3>
         <p>These slow cooker ribs come out perfectly tender every time! 
-            They simmer slowly in a crockpot until juicy, <br>then get coated in barbecue sauce and baked in the oven for fall-off-the-bone goodness. 
+            They simmer slowly in a crackpot until juicy, <br>then get coated in barbecue sauce and baked in the oven for fall-off-the-bone goodness. 
             <br>An easy and delicious meal, perfect for busy weeknights.
         </p>
         
-        <!--<p><strong>Prep Time:</strong> <em>10 mins</em></p>
+        <p><strong>Prep Time:</strong> <em>10 mins</em></p>
         <p><strong>Cook Time:</strong> <em>4 hrs 15 mins</em></p>
         <p><strong>Total Time:</strong> <em>4 hrs 25 mins</em></p>
-        <p><strong>Servings:</strong> <em>6</em></p> -->
+        <p><strong>Servings:</strong> <em>6</em></p>
 
         <h3 class="ingredients">Ingredients</h3>
         <ul>
