--- a/recipes/macAndCheese/macandcheese.html
+++ b/recipes/macAndCheese/macandcheese.html
@@ -22,10 +22,10 @@
             <br>Perfect for family gatherings or potluck dinners, it’s always a crowd-pleaser!
         </p>
         
-        <!--<p><strong>Prep Time:</strong> <em>15 mins</em></p>
+        <p><strong>Prep Time:</strong> <em>15 mins</em></p>
         <p><strong>Cook Time:</strong> <em>3 hrs 15 mins</em></p>
         <p><strong>Total Time:</strong> <em>3 hrs 30 mins</em></p>
-        <p><strong>Servings:</strong> <em>12</em></p> -->
+        <p><strong>Servings:</strong> <em>12</em></p>
 
         <h3 class="ingredients">Ingredients</h3>
         <ul>
