--- a/main/index.html
+++ b/main/index.html
@@ -14,7 +14,7 @@
         <p class="Welcome">Welcome to Odin Recipes! Explore a variety of delicious recipes that you can easily prepare at home using 
         your slow cooker. Whether you're craving hearty meals or comforting classics, we've got you covered. Click on any recipe below to get started!</p>
         
-        <div class="recipes">
+        <nav class="recipes">
             <ul>
                 <div class="recipeOne">
                     <li><strong><a class="pepper-steak" href="/recipes/pepperSteak/peppersteak.html">Pepper Steak</a></strong></li>
@@ -29,6 +29,6 @@
                 <img src="/images/macandcheese.png" alt="Mac and Cheese" height="300" width="400" class="image_macandcheese">
                 </div>
             </ul>
-        </div>
+        </nav>
     </body>
 </html>
